# testing

./: struct_macro.c
am-cunit/: Makefile.am  configure.ac
am-cunit/src/: Makefile.am  main.c
am-cunit/src/hello/: Makefile.in  hello.c  hello.h
am-cunit/tests/: Makefile.am  cunit.c
amhello/: README
amhello/src/: main.c
cunit-array/: Makefile.am
cunit-array/src/: Makefile.am
cunit-array/src/hello/: hello.c
cunit-array/tests/: Makefile.am  cunit.h  unit_hello.c
cunit-auto2/: Makefile.am  configure.ac
cunit-auto2/src/: main.c
cunit-auto2/src/hello/: Makefile.in  hello.h
cunit-auto2/tests/: Makefile.am  cunit.h
libcreation/: Makefile  libmycode.c  librarytest.c
linked_lists/: lList.c  linked
ptr_func/: README.md  configure.ac
ptr_func/src/: Makefile.am  main.c
structs/: README.md  configure.ac
structs/src/: Makefile.am  main.c  test_funcs.c  test_if.h  test_main.c  test_obj_if.c  test_obj_if.h
